# Qt_projekt

./: AddGameDialog.cpp  AddGameDialog.h  CMakeLists.txt  ImagePickerDialog.cpp  ImagePickerDialog.h  addgamedialog.ui  editgamedialog.cpp  editgamedialog.h  editgamedialog.ui  games.db  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  utils.cpp  utils.h
